# nexawal-android

./: .gitignore  .gitmodules  README.md  build.gradle.kts  nginx-monerod-proxy.conf  nginx.conf  settings.gradle.kts
.github/workflows/: unit-tests.yml
app/: build.gradle.kts
app/src/androidTest/java/com/nexatrode/nexawal/: ExampleInstrumentedTest.kt  WalletCoreSmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/nexatrode/nexawal/: DeviceAuthGate.kt  MainActivity.kt  MnemonicCipher.kt  MoneroConfig.kt  Qr.kt  SendModels.kt  TimeFormat.kt  Transfers.kt  WalletManager.kt
app/src/main/java/com/nexatrode/nexawal/devprobe/: ClipboardApiProbe.kt
app/src/main/java/com/nexatrode/nexawal/ui/: AppScaffold.kt  ClipboardCompat.kt  QRScannerScreen.kt  WalletCreationScreen.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
app/src/test/java/com/nexatrode/nexawal/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
logic/src/main/kotlin/com/nexatrode/nexawal/logic/: NetworkRouting.kt  SendGate.kt  SendSafety.kt
logic/src/test/kotlin/com/nexatrode/nexawal/logic/: NetworkRoutingTest.kt  (+1 more)
walletcore/: build.gradle.kts  consumer-rules.pro
walletcore-api/: build.gradle.kts
walletcore/src/main/cpp/: CMakeLists.txt  monerowalletcore.h  walletcore_jni.cpp
(+4 files in other folders)
